[tool.poetry]
name = "pydev"
version = "1.0.0"
description = "Devcontainer setup for Python developement."
authors = ["waanlabs"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
